--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "src/**/*.js"
   ],
   "scripts": {
-    "test": "browserify --transform [ babelify --presets [ es2015 ] ] ./test/*.test.js | tape-run --render='tap-spec' | tap-status",
     "start": "vite -c example/vite.config.ts",
     "lint": "eslint ./src/*.mjs",
     "docs": "vite build -c example/vite.config.ts",
@@ -62,5 +61,11 @@
     "tape-run": "^10.0.0",
     "uglify-js": "^3.0.21",
     "vite": "^5.1.3"
-  }
+  },
+  "directories": {
+    "doc": "docs",
+    "example": "example",
+    "test": "test"
+  },
+  "homepage": "https://github.com/w8r/Leaflet.Path.Drag#readme"
 }
