--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "leaflet-path-drag",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Drag functionality for Leaflet vector layers",
   "scripts": {
-    "build": "rollup -c rollup.config.esm.js && rollup -c rollup.config.iife.js",
-    "build:esm": "rollup -c rollup.config.esm.js"
+    "build": "npm run build:iife && npm run build:esm && npm run build:umd",
+    "build:iife": "rollup -c rollup.config.iife.js",
+    "build:esm": "rollup -c rollup.config.esm.js",
+    "build:umd": "rollup -c rollup.config.umd.js"
   },
   "type": "module",
   "main": "./dist/leaflet_path_drag.iife.js",
