--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "build:umd": "rollup -c rollup.config.umd.js"
   },
   "type": "module",
-  "main": "./dist/leaflet_path_drag.iife.js",
+  "main": "./dist/leaflet_path_drag.umd.js",
+  "module": "./dist/leaflet_path_drag.esm.js",
   "exports": {
-    "import": "./dist/leaflet_path_drag.iife.js"
+    "import": "./dist/leaflet_path_drag.esm.js",
+    "require": "./dist/leaflet_path_drag.umd.js"
   },
   "file": "dist/leaflet_path_drag.iife.js",
   "files": [
